<resources>
    <!-- 中文版    UI元素     -->
    <string name="app_name">SXi</string>
    <string name="title">SXI</string>
    <string name="connect">Connection</string>
    <string name="text_upgrade">Upgrade</string>
    <string name="text_set">Setting</string>
    <string name="text_information">Information</string>
    <string name="text_reset">Reset</string>
    <string name="device_name">Product Name</string>
    <string name="software_name">Chip Software</string>
    <string name="connectedState">Connect State</string>
    <string name="Be_sure_to_reset">Ready for resetting?</string>
    <string name="sure">OK</string>
    <string name="cancel">Cancel</string>

    <!--  UI HUD  -->
    <string name="reset_success">Reset Success</string>
    <string name="searching">Searching</string>
    <string name="connecting">Connecting</string>
    <string name="Modifying">Modifying</string>
    <string name="connect_successfully">Connect Success</string>
    <string name="submit_password">Submit password</string>
    <string name="submit_password_success"> Password submit success</string>
    <string name="submit_password_failed"> Password submit failed</string>

    <string name="no_device_find">Not found</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnect">Retrieved</string>
    <string name="read">Reading</string>
    <string name="reading">Reading</string>
    <string name="out_of_limit">Beyond Constraint Too Much</string>
    <string name="no_support">Peripheral version not support</string>
    <string name="main_no_connect">No Peripheral connected</string>
    <string name="point_out_title">Tips</string>
    <string name="point_out_information_1">Connect failed, may be the password modification function of Bluetooth module is abnormal</string>
    <string name="point_out_information_2">Please follow the following steps to reset:\nA.Exit the Sxi App.\nB.Operate the device Manually,enter the 『Device Pairing』 interface.\nC.Press down the fire button and keep 5 seconds to enter the bluetooth pairing interface.\nD.Restart the App, search the device again,connect and pairing with the found device.</string>
    <string name="connect_fail">Load failed</string>
    <string name="have_been_connected">Device Connected</string>

    <string name="connected">Connected</string>
    <string name="no_connected">Device disconnected</string>
    <string name="save_success">Save success</string>
    <string name="double_kill">Double click to exit this application</string>


    <string name="SXi_Q">SXi</string>
    <string name="ID">ID</string>

    <string name="have_been_not_connected">Device disconnected</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="no_connect">Disconnected</string>

    <string name="set_detail_model">BYPASS</string>
    <string name="set_display_status">DISPLAY MODE</string>
    <string name="set_display_status_left">LEFT</string>
    <string name="set_display_status_right">RIGHT</string>
    <string name="set_display_status_auto">AUTO</string>

    <string name="set_material">COIL SELECT</string>
    <string name="material_nickel_wire">NI200</string>
    <string name="material_titanium_wire">TI01</string>
    <string name="material_stainless_steel_wire">SS316</string>
    <string name="material_alcohol_control">SX_PURE</string>
    <string name="material_TCR_manual">TCR_MANUAL</string>

    <string name="select_texture">OUTPUT MODE</string>
    <string name="texture_power_save">ECO</string>
    <string name="texture_soft">SOFT</string>
    <string name="texture_standard">STANDARD</string>
    <string name="texture_strong">POWERFUL</string>
    <string name="texture_super_strong">POWERFUL+</string>
    <string name="texture_custom_s1">SXiQ_S1</string>
    <string name="texture_custom_s2">SXiQ_S2</string>
    <string name="texture_custom_s3">SXiQ_S3</string>
    <string name="texture_custom_s4">SXiQ_S4</string>
    <string name="texture_custom_s5">SXiQ_S5</string>

    <string name="select_memory_mode">ADJUST MODE</string>
    <string name="memory_m1">M1</string>
    <string name="memory_m2">M2</string>
    <string name="memory_m3">M3</string>
    <string name="memory_m4">M4</string>
    <string name="memory_m5">M5</string>

    <string name="select_temperature_unit">TEMPERATURE</string>
    <string name="temperature_C">℃</string>
    <string name="temperature_F">℉</string>

    <string name="select_power_joule_switch">WORK MODE</string>
    <string name="power">Watts</string>
    <string name="joule">Joule</string>

    <string name="select_operation_mode">OPERATION</string>
    <string name="operation_mode_primary">Novice</string>
    <string name="operation_mode_senior">Advanced</string>

    <string name="adjust_temperature">Temperature</string>
    <string name="compensation_temperature">Compensate</string>
    <string name="set_TCR">MANUAL TCR</string>
    <string name="power_regulation">POWER</string>
    <string name="joule_regulation">JOULE</string>
    <string name="close_the_tip">close</string>

    <string name="set_wallpaper">Wallpaper</string>
    <string name="choose_picture">choose a new wallpaper</string>
    <string name="Index_of_Wallpaper">Index of Wallpaper</string>
    <string name="downloading">Downloading</string>
</resources>
