<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yihai.wu.sxi.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:alpha="0.2"
            android:background="@color/colorWhite"/>

    </RelativeLayout>
    <!--  轮播图  -->
    <com.youth.banner.Banner
        android:id="@+id/head_banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:delay_time="3000"
        app:image_scale_type="fit_xy"
        app:indicator_drawable_selected="@mipmap/page_indicator_focused"
        app:indicator_drawable_unselected="@mipmap/page_indicator_unfocused"
        />

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:text="设备未连接"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <com.yihai.wu.util.DarkImageButton
                android:id="@+id/btn_connect"
                android:background="@mipmap/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >
            <com.yihai.wu.util.DarkImageButton
                android:id="@+id/btn_upgrade"
                android:background="@mipmap/upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/text_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout> <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <com.yihai.wu.util.DarkImageButton
            android:id="@+id/btn_set"
            android:background="@mipmap/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/text_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/middle_reset"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.yihai.wu.util.DarkImageButton
            android:background="@mipmap/information"
            android:layout_width="wrap_content"
            android:id="@+id/btn_information"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/text_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

        <LinearLayout

            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <com.yihai.wu.util.DarkImageButton
                android:id="@+id/btn_reset"
                android:background="@mipmap/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/text_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>
        <LinearLayout
            android:clickable="false"
            android:visibility="invisible"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.yihai.wu.util.DarkImageButton
                android:background="@mipmap/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </LinearLayout>

    </LinearLayout>

</LinearLayout>
