<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite">

    <RelativeLayout
        android:id="@+id/head_actionbbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical">

        <com.yihai.wu.util.DarkImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@mipmap/ic_menu_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_information"
            android:textSize="@dimen/activity_title_size"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="6dp"
            android:textSize="@dimen/activity_title_size"
            android:text="@string/device_name"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/soft"
            android:textSize="@dimen/activity_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/device_name"
            android:layout_below="@+id/device_name"
            android:layout_marginLeft="20dp"
            android:padding="6dp"
            android:text="@string/software_name"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/SXi_Q"
            android:textSize="@dimen/activity_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/device_name"
            android:layout_below="@+id/soft"
            android:padding="6dp"
            android:text="@string/SXi_Q"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/tv_id"
            android:textSize="@dimen/activity_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/device_name"
            android:layout_below="@+id/SXi_Q"
            android:padding="6dp"
            android:text="@string/ID"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:textSize="@dimen/activity_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/device_name"
            android:layout_below="@+id/tv_id"
            android:padding="6dp"
            android:text="@string/Connection_status"
            android:textColor="@color/colorPrimaryDark"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/relative_1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_after"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/activity_title_size"
            android:padding="6dp"
            android:text="YiHi SXmini-Q-Class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/soft_after"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/activity_title_size"
            android:padding="6dp"
            android:text="X.X.X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/colorGray"
            android:textSize="@dimen/activity_title_size"
            android:padding="6dp"
            android:text="1.055"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/id_after"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/activity_title_size"
            android:padding="6dp"
            android:text="XXXXXXXXXXX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/connect_state"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/activity_title_size"
            android:padding="6dp"
            android:text="设备未连接"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</RelativeLayout>